<resources>
    <string name="app_name">MAptos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_DeFi">DeFi</string>
    <string name="title_login">Aptos Explorer</string>
    <string name="subtitle_login">Unlocking the Future of Decentralized Finance and Innovation</string>
    <string name="i_don_t_have_a_wallet">I don\'t have a wallet</string>
    <string name="create_a_new_wallet">Create a new wallet</string>
    <string name="i_have_a_wallet">I have a wallet</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="mnemonics">Mnemonics</string>
    <string name="please_copy_or_back_up_the_mnemonic_phrase">Back up the mnemonic phrase</string>
    <string name="private_key">Private Key</string>
    <string name="import_mnemonics">Import Mnemonics</string>
    <string name="import_private_key_actionbar">Import Private Key</string>
    <string name="import_private_key">Import private key</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="enter_the_mnemonic_separated_by_spaces">Enter the mnemonic, separated by spaces</string>
</resources>