<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.ImportFragment">
    <RelativeLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:orientation="horizontal"
            android:id="@+id/import_wallet_actionBar"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:layout_marginStart="10dp"
                android:id="@+id/back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/back"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/action_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/import_mnemonics">
            </TextView>

        </RelativeLayout>
        <EditText
            android:focusableInTouchMode="true"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_edittext_background"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/import_wallet_actionBar"
            android:id="@+id/import_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:textSize="16sp"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:overScrollMode="always"
            android:imeOptions="actionDone"
            android:padding="16dp"

            android:textColorHint="@color/import_wallet_button_text"
            android:hint="@string/enter_the_mnemonic_separated_by_spaces" />

        <com.google.android.material.card.MaterialCardView
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/import_wallet_button"
            app:cardCornerRadius="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:text="@string/confirm"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/import_wallet_button_text"
                android:layout_height="wrap_content">
            </TextView>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</FrameLayout>